syntax = "proto3";

package effect.events.ai;

import "common/events.proto";
import "common/learning_types.proto";

// AI タスク作成イベント
message TaskCreated {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  effect.common.AITaskType task_type = 3;
  string target_id = 4; // 対象のID（例：ItemId）
  string request_content_json = 5; // リクエスト内容（JSON形式）
  TaskPriority priority = 6; // タスクの優先度
}

// AI タスク開始イベント
message TaskStarted {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  string provider = 3; // AI プロバイダー（例："openai", "anthropic"）
  string model = 4; // 使用するモデル（例："gpt-4", "claude-3"）
}

// AI タスク完了イベント
message TaskCompleted {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  uint64 duration_ms = 3; // 処理時間（ミリ秒）
  string result_json = 4; // 生成結果（JSON形式）
  uint32 token_count = 5; // 使用トークン数
}

// AI タスク失敗イベント
message TaskFailed {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  string error = 3; // エラーメッセージ
  uint32 retry_count = 4; // リトライ回数
  bool is_retryable = 5; // リトライ可能かどうか
  TaskFailureReason failure_reason = 6; // 失敗理由
}

// タスク再試行イベント
message TaskRetried {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  uint32 retry_attempt = 3; // 何回目の再試行か
  string previous_error = 4; // 前回のエラー
  uint32 delay_ms = 5; // 再試行までの遅延（ミリ秒）
}

// タスクキャンセルイベント
message TaskCancelled {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  string reason = 3; // キャンセル理由
  string cancelled_by = 4; // キャンセルしたユーザー/システム
}

// 生成キャンセルイベント
message GenerationCancelled {
  effect.common.EventMetadata metadata = 1;
  string task_id = 2; // UUID
  string item_id = 3; // 対象項目のID
  string reason = 4; // キャンセル理由
}

// チャットセッション開始イベント
message ChatSessionStarted {
  effect.common.EventMetadata metadata = 1;
  string session_id = 2; // UUID
  string user_id = 3; // UUID
  string context_type = 4; // チャットのコンテキストタイプ
}

// チャットメッセージ送信イベント
message ChatMessageSent {
  effect.common.EventMetadata metadata = 1;
  string session_id = 2; // UUID
  string message_id = 3; // UUID
  string content = 4; // メッセージ内容
  MessageRole role = 5; // メッセージの役割
}

// タスクの優先度
enum TaskPriority {
  TASK_PRIORITY_UNSPECIFIED = 0;
  TASK_PRIORITY_LOW = 1;
  TASK_PRIORITY_NORMAL = 2;
  TASK_PRIORITY_HIGH = 3;
  TASK_PRIORITY_URGENT = 4;
}

// タスク失敗理由
enum TaskFailureReason {
  TASK_FAILURE_REASON_UNSPECIFIED = 0;
  TASK_FAILURE_REASON_RATE_LIMIT = 1; // レート制限
  TASK_FAILURE_REASON_TIMEOUT = 2; // タイムアウト
  TASK_FAILURE_REASON_INVALID_REQUEST = 3; // 無効なリクエスト
  TASK_FAILURE_REASON_PROVIDER_ERROR = 4; // プロバイダーエラー
  TASK_FAILURE_REASON_NETWORK_ERROR = 5; // ネットワークエラー
  TASK_FAILURE_REASON_QUOTA_EXCEEDED = 6; // クォータ超過
}

// メッセージの役割
enum MessageRole {
  MESSAGE_ROLE_UNSPECIFIED = 0;
  MESSAGE_ROLE_USER = 1; // ユーザーのメッセージ
  MESSAGE_ROLE_ASSISTANT = 2; // AIアシスタントのメッセージ
  MESSAGE_ROLE_SYSTEM = 3; // システムメッセージ
}

// AI 統合コンテキストのイベント
message AIIntegrationEvent {
  oneof event {
    TaskCreated task_created = 1;
    TaskStarted task_started = 2;
    TaskCompleted task_completed = 3;
    TaskFailed task_failed = 4;
    TaskRetried task_retried = 5;
    TaskCancelled task_cancelled = 6;
    GenerationCancelled generation_cancelled = 7;
    ChatSessionStarted chat_session_started = 8;
    ChatMessageSent chat_message_sent = 9;
  }
}
